Made nav bar blur backdrop when scrolled down

--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@
 </head>
 <body>
     <div id="nav-bar">
-        <a class="nav-link">About Us</a>&nbsp;
-        <a class="nav-link">Menu</a>&nbsp;
-        <a class="nav-link">Locations</a>&nbsp;
+        <div id="nav-link-container">
+            <a class="nav-link">About Us</a>&nbsp;
+            <a class="nav-link">Menu</a>&nbsp;
+            <a class="nav-link">Locations</a>&nbsp;
+        </div>
     </div>
     <div id="title-div">
         <div id="inner-title-div">
             <h1 id="title">A GREENER PLATE</h1>
         </div>
     </div>
+    <br><br><br><br><br><br>
     <h3 id="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor sem nibh, a suscipit est laoreet congue. Maecenas in pretium risus. Mauris dignissim mollis urna. In hac habitasse platea dictumst. Vivamus lacinia eu tortor ut blandit. Nulla nec libero ut tortor pharetra mollis quis at nibh.</h3>
     <div id="menu">
 
     </div>
     <div id="googleMap" style="width:100%;height:400px;"></div>
+    <br><br><br><br><br><br><br><br>
     <script src="script.js"></script>
     <script>
         async function locationMap() {
