--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         </div>
     </div>
     <div id="title-div">
+        <video id="background-video" autoplay muted loop>
+            <source src="./assets/videos/title-slideshow/gp-pasta.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <div id="inner-title-div">
             <h1 id="title">A GREENER PLATE</h1>
         </div>
