--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
     <br><br><br><br><br><br>
     <h3 id="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor sem nibh, a suscipit est laoreet congue. Maecenas in pretium risus. Mauris dignissim mollis urna. In hac habitasse platea dictumst. Vivamus lacinia eu tortor ut blandit. Nulla nec libero ut tortor pharetra mollis quis at nibh.</h3>
+    <p style="text-align: center;">Hello</p>
     <div id="menu">
 
     </div>
