added home on navigation bar and tried to add a link to the about, locations, and contact

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <div id="nav-bar">
         <div id="nav-link-container">
-            <a class="nav-link">About Us</a>&nbsp;
-            <a class="nav-link">Menu</a>&nbsp;
-            <a class="nav-link">Locations</a>&nbsp;
+            <a class="nav-link" >Home</a>&nbsp;
+            <a class="nav-link" href="./about/">About</a>&nbsp;
+            <a class="nav-link" href="./menu/">Menu</a>&nbsp;
+            <a class="nav-link" href="./locations/">Locations</a>&nbsp;
+            <a class="nav-link" href="./contact/">Contact</a>&nbsp;
         </div>
     </div>
     <div id="title-div">
@@ -26,7 +28,7 @@
     </div>
     <br><br><br><br><br><br>
     <h3 id="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor sem nibh, a suscipit est laoreet congue. Maecenas in pretium risus. Mauris dignissim mollis urna. In hac habitasse platea dictumst. Vivamus lacinia eu tortor ut blandit. Nulla nec libero ut tortor pharetra mollis quis at nibh.</h3>
-    <p style="text-align: center;">Hello</p>
+    <p style="text-align: center;">Test</p>
     <div id="menu">
 
     </div>
