fixed navigation bar on all pages, still need link to get back to homepage.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <div id="nav-bar">
         <div id="nav-link-container">
-            <a class="nav-link" >Home</a>&nbsp;
-            <a class="nav-link" href="./about/">About</a>&nbsp;
+            <a class="nav-link" href="./about/">About Us</a>&nbsp;
             <a class="nav-link" href="./menu/">Menu</a>&nbsp;
             <a class="nav-link" href="./locations/">Locations</a>&nbsp;
             <a class="nav-link" href="./contact/">Contact</a>&nbsp;
@@ -23,7 +22,7 @@
             Your browser does not support the video tag.
         </video>
         <div id="inner-title-div">
-            <h1 id="title">A GREENER PLATE</h1>
+            <h1 id="title"> THE GREENER PLATE</h1>
         </div>
     </div>
     <br><br><br><br><br><br>
