Redesigned home page

--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
 <body>
     <div id="nav-bar">
         <div id="nav-link-container">
-            <a class="nav-link" href="./about/">About Us</a>&nbsp;
+            <a class="nav-link" href="./about/">About</a>&nbsp;
             <a class="nav-link" href="./menu/">Menu</a>&nbsp;
             <a class="nav-link" href="./locations/">Locations</a>&nbsp;
             <a class="nav-link" href="./contact/">Contact</a>&nbsp;
         </div>
     </div>
     <div id="title-div">
-        <video id="background-video" autoplay muted loop>
-            <source src="./assets/videos/title-slideshow/gp-pasta.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <div id="inner-title-div">
-            <h1 id="title"> THE GREENER PLATE</h1>
-        </div>
+        <img id="title" src="assets/images/title.png">
+        <h3 id="subtitle">"A greener plate makes the world a greener place."</h3>
+        <br>
+        <img id="order-button" src="assets/images/order-button.png"><br>
+        <img id="table-img" src="assets/images/greener-plate-table.png">
     </div>
     <br><br><br><br><br><br>
     <h3 id="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor sem nibh, a suscipit est laoreet congue. Maecenas in pretium risus. Mauris dignissim mollis urna. In hac habitasse platea dictumst. Vivamus lacinia eu tortor ut blandit. Nulla nec libero ut tortor pharetra mollis quis at nibh.</h3>
