--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,8 @@
             <h3 id="subtitle" style="color: transparent;">"A greener plate makes the world a greener place."</h3>
             <br>
             <!--<img id="order-button" src="assets/images/order-button.png">-->
-            <button id="order-button"><span id="order-button-text">ORDER NOW</span></button>
+            <!--<button id="order-button"><span id="order-button-text">ORDER NOW</span></button>-->
+            <img id="order-button-img" src="assets/images/order-button.png"><br>
             <br>
         </div>
     </div>
