Switched main index files

--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
         <div id="sub-nav-bar"></div>
     </div>
     <div id="title-div">
-        <img id="title-img" src="assets/images/title.png">
-        <h3 id="subtitle">"A greener plate makes the world a greener place."</h3>
-        <br>
-        <img id="order-button-img" src="assets/images/order-button.png"><br>
-        <img id="table-img" src="assets/images/greener-plate-table.png">
+        <video id="background-video" autoplay muted loop>
+            <source src="./assets/videos/title-slideshow/gp-pasta.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div id="inner-title-div">
+            <img id="title" src="assets/images/title-dark-alt.png">
+            <h3 id="subtitle" style="color: transparent;">"A greener plate makes the world a greener place."</h3>
+            <br>
+            <!--<img id="order-button" src="assets/images/order-button.png">-->
+            <!--<button id="order-button"><span id="order-button-text">ORDER NOW</span></button>-->
+            <img id="order-button-img" src="assets/images/order-button.png"><br>
+            <br>
+        </div>
     </div>
     <br><br><br><br><br><br>
     <h3 id="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor sem nibh, a suscipit est laoreet congue. Maecenas in pretium risus. Mauris dignissim mollis urna. In hac habitasse platea dictumst. Vivamus lacinia eu tortor ut blandit. Nulla nec libero ut tortor pharetra mollis quis at nibh.</h3>
