--- a/menu/index.html
+++ b/menu/index.html
@@ -16,5 +16,15 @@
           <a class="nav-link" href="/contact/">Contact</a>&nbsp;
       </div>
   </div>
+  <footer>
+    <div class="footer-section">
+        <h3>NAVIGATION</h3>
+        <a href="/about/" class="footer-link">ABOUT US</a><br><br>
+        <a href="/menu/" class="footer-link">MENU</a><br><br>
+        <a href="/locations/" class="footer-link">LOCATIONS</a><br><br>
+        <a href="/contact/" class="footer-link">CONTACT</a>
+        <!-- <a href="https://yelp.com" class="footer-link">Reviews</a> --> 
+    </div>
+</footer>
   </body>
 </html>
