--- a/index.html
+++ b/index.html
@@ -58,5 +58,23 @@
             }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2CCcSLJ8wrlTCga__zurFwyCkYAZhBoQ&callback=locationMap"></script>
+    <!--<div class="footer">
+        <div class="primary-footer">
+            <div class="content-wrapper">
+                <div class="footer-links-container">
+                    <div class="primary-footer-links-container">
+                        <div class="primary-links-wrapper">
+                            <a href="/about/" class="footer-link">ABOUT US</a><br><br>
+                            <a href="/menu/" class="footer-link">MENU</a><br><br>
+                            <a href="/locations/" class="footer-link">LOCATIONS</a><br><br>
+                            <a href="/contact/" class="footer-link">CONTACT</a> -->
+<div class="footer-section">
+    <h3>NAVIGATION</h3>
+    <a href="/about/" class="footer-link">ABOUT US</a><br><br>
+    <a href="/menu/" class="footer-link">MENU</a><br><br>
+    <a href="/locations/" class="footer-link">LOCATIONS</a><br><br>
+    <a href="/contact/" class="footer-link">CONTACT</a>
+    <!-- <a href="https://yelp.com" class="footer-link">Reviews</a> --> 
+</div> 
 </body>
 </html>
