Updated menu page

--- a/menu/index.html
+++ b/menu/index.html
@@ -33,78 +33,78 @@
       <a class="menu-category" id="category-desserts" href="desserts">DESSERTS</a>
       <a class="menu-category" id="category-drinks" hred="drinks">DRINKS</a>
     </div>
+    </div>
     <br><br>
     <div id="menu-container">
       <div id="favorites" class="category-container"></div>
       <div id="appetizers" class="category-container">
-        <h2>Appetizers</h2>
+        <h2>APETIZERS</h2>
         <div class="menu-item">
           <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Guacamole</h3>
+          <h3 class="menu-item-title">Coconut Chutney</h3>
           <p class="menu-item-desc">$8.00</p>
           <button class="menu-item-add">ADD</button>
         </div>
         <div class="menu-item">
           <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Guacamole</h3>
+          <h3 class="menu-item-title">Coconut Chutney</h3>
           <p class="menu-item-desc">$8.00</p>
           <button class="menu-item-add">ADD</button>
         </div>
         <div class="menu-item">
           <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Guacamole</h3>
+          <h3 class="menu-item-title">Coconut Chutney</h3>
           <p class="menu-item-desc">$8.00</p>
           <button class="menu-item-add">ADD</button>
         </div>
         <div class="menu-item">
           <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Guacamole</h3>
+          <h3 class="menu-item-title">Coconut Chutney</h3>
           <p class="menu-item-desc">$8.00</p>
           <button class="menu-item-add">ADD</button>
         </div>
         <div class="menu-item">
           <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Guacamole</h3>
+          <h3 class="menu-item-title">Coconut Chutney</h3>
           <p class="menu-item-desc">$8.00</p>
           <button class="menu-item-add">ADD</button>
         </div>
         <div class="menu-item">
           <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Guacamole</h3>
+          <h3 class="menu-item-title">Coconut Chutney</h3>
           <p class="menu-item-desc">$8.00</p>
           <button class="menu-item-add">ADD</button>
         </div>
         <div class="menu-item">
           <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Guacamole</h3>
+          <h3 class="menu-item-title">Coconut Chutney</h3>
           <p class="menu-item-desc">$8.00</p>
           <button class="menu-item-add">ADD</button>
         </div>
         <div class="menu-item">
           <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Guacamole</h3>
+          <h3 class="menu-item-title">Coconut Chutney</h3>
           <p class="menu-item-desc">$8.00</p>
           <button class="menu-item-add">ADD</button>
         </div>
         <div class="menu-item">
           <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Guacamole</h3>
+          <h3 class="menu-item-title">Coconut Chutney</h3>
           <p class="menu-item-desc">$8.00</p>
           <button class="menu-item-add">ADD</button>
         </div>
         <div class="menu-item">
           <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Guacamole</h3>
+          <h3 class="menu-item-title">Coconut Chutney</h3>
           <p class="menu-item-desc">$8.00</p>
           <button class="menu-item-add">ADD</button>
         </div>
         <div class="menu-item">
           <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Guacamole</h3>
+          <h3 class="menu-item-title">Coconut Chutney</h3>
           <p class="menu-item-desc">$8.00</p>
           <button class="menu-item-add">ADD</button>
         </div>
-      </div>
     </div>
   <!-- <footer>
     <div class="footer-section">
