Added menu items

--- a/menu/index.html
+++ b/menu/index.html
@@ -37,74 +37,39 @@
     <br><br>
     <div id="menu-container">
       <div id="favorites" class="category-container"></div>
-      <div id="appetizers" class="category-container">
+      <div id="appetizers-container" class="category-container">
         <h2>APETIZERS</h2>
-        <div class="menu-item">
-          <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Coconut Chutney</h3>
-          <p class="menu-item-desc">$8.00</p>
-          <button class="menu-item-add">ADD</button>
-        </div>
-        <div class="menu-item">
-          <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Coconut Chutney</h3>
-          <p class="menu-item-desc">$8.00</p>
-          <button class="menu-item-add">ADD</button>
-        </div>
-        <div class="menu-item">
-          <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Coconut Chutney</h3>
-          <p class="menu-item-desc">$8.00</p>
-          <button class="menu-item-add">ADD</button>
-        </div>
-        <div class="menu-item">
-          <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Coconut Chutney</h3>
-          <p class="menu-item-desc">$8.00</p>
-          <button class="menu-item-add">ADD</button>
-        </div>
-        <div class="menu-item">
-          <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Coconut Chutney</h3>
-          <p class="menu-item-desc">$8.00</p>
-          <button class="menu-item-add">ADD</button>
-        </div>
-        <div class="menu-item">
-          <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Coconut Chutney</h3>
-          <p class="menu-item-desc">$8.00</p>
-          <button class="menu-item-add">ADD</button>
-        </div>
-        <div class="menu-item">
-          <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Coconut Chutney</h3>
-          <p class="menu-item-desc">$8.00</p>
-          <button class="menu-item-add">ADD</button>
-        </div>
-        <div class="menu-item">
-          <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Coconut Chutney</h3>
-          <p class="menu-item-desc">$8.00</p>
-          <button class="menu-item-add">ADD</button>
-        </div>
-        <div class="menu-item">
-          <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Coconut Chutney</h3>
-          <p class="menu-item-desc">$8.00</p>
-          <button class="menu-item-add">ADD</button>
-        </div>
-        <div class="menu-item">
-          <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Coconut Chutney</h3>
-          <p class="menu-item-desc">$8.00</p>
-          <button class="menu-item-add">ADD</button>
-        </div>
-        <div class="menu-item">
-          <img src="/assets/images/veggie-pizza.png" class="menu-item-img">
-          <h3 class="menu-item-title">Coconut Chutney</h3>
-          <p class="menu-item-desc">$8.00</p>
-          <button class="menu-item-add">ADD</button>
-        </div>
+      </div>
+    </div>
+    <div id="brunch-container" class="category-container">
+      <h2>BRUNCH</h2>
+    </div>
+    <div id="americas-container" class="category-container">
+      <h2>AMERICAS</h2>
+    </div>
+    <div id="europe-container" class="category-container">
+      <h2>EUROPE</h2>
+    </div>
+    <div id="middle-east-container" class="category-container">
+      <h2>MIDDLE EAST</h2>
+    </div>
+    <div id="africa-container" class="category-container">
+      <h2>AFRICA</h2>
+    </div>
+    <div id="asia-container" class="category-container">
+      <h2>ASIA</h2>
+    </div>
+    <div id="sides-container" class="category-container">
+      <h2>SIDES</h2>
+    </div>
+    <div id="kids-container" class="category-container">
+      <h2>KIDS</h2>
+    </div>
+    <div id="desserts-container" class="category-container">
+      <h2>DESSERTS</h2>
+    </div>
+    <div id="drinks-container" class="category-container">
+      <h2>DRINKS</h2>
     </div>
   <!-- <footer>
     <div class="footer-section">
