Quality checked and simplified JavaScript

--- a/menu/index.html
+++ b/menu/index.html
@@ -21,24 +21,24 @@
       <div id="menu-category-div-foreground"></div>
       <button class="category-scroll-button" id="category-scroll-left">❮</button>
       <button class="category-scroll-button" id="category-scroll-right">❯</button>
-      <a class="menu-category" id="category-appetizers" href="#appetizers">APPETIZERS</a>
-      <a class="menu-category" id="category-brunch" href="#brunch">BRUNCH</a>
-      <a class="menu-category" id="category-mains" href="#americas">AMERICAS</a>
-      <a class="menu-category" id="category-mains" href="#europe">EUROPE</a>
-      <a class="menu-category" id="category-mains" href="#middle-east">MIDDLE EAST</a>
-      <a class="menu-category" id="category-mains" href="#africa">AFRICA</a>
-      <a class="menu-category" id="category-mains" href="#asia">ASIA</a>
-      <a class="menu-category" id="category-sides" href="#sides">SIDES</a>
-      <a class="menu-category" id="category-kids" href="kids">KIDS</a>
-      <a class="menu-category" id="category-desserts" href="desserts">DESSERTS</a>
-      <a class="menu-category" id="category-drinks" hred="drinks">DRINKS</a>
+      <a class="menu-category" id="category-appetizers" href="#appetizers-container">APPETIZERS</a>
+      <a class="menu-category" id="category-brunch" href="#brunch-container">BRUNCH</a>
+      <a class="menu-category" id="category-mains" href="#americas-container">AMERICAS</a>
+      <a class="menu-category" id="category-mains" href="#europe-container">EUROPE</a>
+      <a class="menu-category" id="category-mains" href="#middle-east-container">MIDDLE EAST</a>
+      <a class="menu-category" id="category-mains" href="#africa-container">AFRICA</a>
+      <a class="menu-category" id="category-mains" href="#asia-container">ASIA</a>
+      <a class="menu-category" id="category-sides" href="#sides-container">SIDES</a>
+      <a class="menu-category" id="category-kids" href="#kids-container">KIDS</a>
+      <a class="menu-category" id="category-desserts" href="#desserts-container">DESSERTS</a>
+      <a class="menu-category" id="category-drinks" href="#drinks-container">DRINKS</a>
     </div>
     </div>
     <br><br>
     <div id="menu-container">
       <div id="favorites" class="category-container"></div>
       <div id="appetizers-container" class="category-container">
-        <h2>APETIZERS</h2>
+        <h2>APPETIZERS</h2>
       </div>
     </div>
     <div id="brunch-container" class="category-container">
@@ -80,6 +80,7 @@
         <a href="/contact/" class="footer-link">CONTACT</a>
       </div>
 </footer> -->
-<script src="script.js"></script>
+<script type="module" src="menu-items.js"></script>
+<script type="module" src="script.js"></script>
   </body>
 </html>
