Added effect to selected menu category

--- a/menu/index.html
+++ b/menu/index.html
@@ -38,38 +38,38 @@
     <div id="menu-container">
       <div id="favorites" class="category-container"></div>
       <div id="appetizers-container" class="category-container">
-        <h2>APPETIZERS</h2>
+        <h2 class="category-title">APPETIZERS</h2>
       </div>
     </div>
     <div id="brunch-container" class="category-container">
-      <h2>BRUNCH</h2>
+      <h2 class="category-title">BRUNCH</h2>
     </div>
     <div id="americas-container" class="category-container">
-      <h2>AMERICAS</h2>
+      <h2 class="category-title">AMERICAS</h2>
     </div>
     <div id="europe-container" class="category-container">
-      <h2>EUROPE</h2>
+      <h2 class="category-title">EUROPE</h2>
     </div>
     <div id="middle-east-container" class="category-container">
-      <h2>MIDDLE EAST</h2>
+      <h2 class="category-title">MIDDLE EAST</h2>
     </div>
     <div id="africa-container" class="category-container">
-      <h2>AFRICA</h2>
+      <h2 class="category-title">AFRICA</h2>
     </div>
     <div id="asia-container" class="category-container">
-      <h2>ASIA</h2>
+      <h2 class="category-title">ASIA</h2>
     </div>
     <div id="sides-container" class="category-container">
-      <h2>SIDES</h2>
+      <h2 class="category-title">SIDES</h2>
     </div>
     <div id="kids-container" class="category-container">
-      <h2>KIDS</h2>
+      <h2 class="category-title">KIDS</h2>
     </div>
     <div id="desserts-container" class="category-container">
-      <h2>DESSERTS</h2>
+      <h2 class="category-title">DESSERTS</h2>
     </div>
     <div id="drinks-container" class="category-container">
-      <h2>DRINKS</h2>
+      <h2 class="category-title">DRINKS</h2>
     </div>
   <!-- <footer>
     <div class="footer-section">
