Fixed relative paths

--- a/menu/item/index.html
+++ b/menu/item/index.html
@@ -20,7 +20,7 @@
     </div>
     <div id="left-item-div">
         <a href="../" id="back-to-menu">❮ &nbsp; Back to Menu</a>
-        <img id="item-img" onerror="this.src='/assets/images/item-not-found.png'">
+        <img id="item-img" onerror="this.src='../../assets/images/item-not-found.png'">
     </div>
     <div id="right-item-div">
         <h2 id="item-name">Item</h2>
