--- a/menu/item/index.html
+++ b/menu/item/index.html
@@ -11,10 +11,10 @@
   <body>
     <div id="nav-bar">
       <div id="nav-link-container">
-          <a class="nav-link" href="./about/">About</a>&nbsp;
-          <a class="nav-link" href="./menu/">Menu</a>&nbsp;
-          <a class="nav-link" href="./locations/">Locations</a>&nbsp;
-          <a class="nav-link" href="./contact/">Contact</a>&nbsp;
+          <a class="nav-link" href="../../about/">About</a>&nbsp;
+          <a class="nav-link" href="../../menu/">Menu</a>&nbsp;
+          <a class="nav-link" href="../../locations/">Locations</a>&nbsp;
+          <a class="nav-link" href="../../contact/">Contact</a>&nbsp;
       </div>
     <div id="sub-nav-bar"></div>
     </div>
