--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div id="nav-link-container">
             <a class="nav-link" href="./about/">About</a>&nbsp;
             <a class="nav-link" href="./menu/">Menu</a>&nbsp;
-            <a class="nav-link" href="./locations/">Locations</a>&nbsp;
-            <a class="nav-link" href="./contact/">Contact</a>&nbsp;
+            <a class="nav-link" href="./references/">References</a>&nbsp;
+            <!--<a class="nav-link" href="./locations/">Locations</a>&nbsp;
+            <a class="nav-link" href="./contact/">Contact</a>&nbsp;-->
         </div>
-        <div id="sub-nav-bar"></div>
     </div>
     <div id="title-div">
-        <video id="background-video" autoplay muted loop>
+        <video id="background-video" autoplay muted loop playsinline>
             <source src="./assets/videos/title-slideshow/gp-pasta.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
@@ -41,7 +41,7 @@
     <div id="googleMap" style="width:100%;height:400px;"></div>
     <br><br><br><br><br><br><br><br>
     <script src="script.js"></script>
-    <script>
+    <!-- <script>
         async function locationMap() {
             const { AdvancedMarkerElement } = await google.maps.importLibrary("marker");
             var mapProp= {
@@ -57,7 +57,7 @@
             });
             }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2CCcSLJ8wrlTCga__zurFwyCkYAZhBoQ&callback=locationMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2CCcSLJ8wrlTCga__zurFwyCkYAZhBoQ&callback=locationMap"></script>-->
     <!--<div class="footer">
         <div class="primary-footer">
             <div class="content-wrapper">
