--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div id="nav-bar">
-        <a id="logo" href="/"><img id="logo-img" src="/assets/images/logo.png"></a>
+        <a id="logo" href="./"><img id="logo-img" src="./assets/images/logo.png"></a>
         <div id="nav-link-container">
             <a class="nav-link" href="./about/">About</a>&nbsp;
             <a class="nav-link" href="./menu/">Menu</a>&nbsp;
