--- a/menu/index.html
+++ b/menu/index.html
@@ -34,6 +34,7 @@
           <a class="nav-link" href="../references/">References</a>&nbsp;
           <!--<a class="nav-link" href="../locations/">Locations</a>&nbsp;
           <a class="nav-link" href="../contact/">Contact</a>&nbsp;-->
+          <button id="menu-button" hidden>☰</button>
       </div>
     <div id="menu-category-div">
       <div id="menu-category-div-foreground"></div>
@@ -51,6 +52,13 @@
       <a class="menu-category" id="category-desserts" href="#desserts-container">DESSERTS</a>
       <a class="menu-category" id="category-drinks" href="#drinks-container">DRINKS</a>
     </div>
+    </div>
+    <div id="nav-menu" hidden>
+      <a class="nav-menu-link" href="../about/">About</a><br>
+      <a class="nav-menu-link" href="../menu/">Menu</a><br>
+      <a class="nav-menu-link" href="../references/">References</a><br>
+      <!--<a class="nav-menu-link" href="../locations/">Locations</a><br>
+      <a class="nav-menu-link" href="../contact/">Contact</a><br>-->
     </div>
     <br><br>
     <div id="menu-container">
@@ -100,5 +108,6 @@
 </footer> -->
 <script type="module" src="menu-items.js"></script>
 <script type="module" src="script.js"></script>
+<script src="../universal.js"></script>
   </body>
 </html>
