--- a/menu/item/index.html
+++ b/menu/item/index.html
@@ -34,7 +34,15 @@
           <a class="nav-link" href="../../references/">References</a>&nbsp;
           <!--<a class="nav-link" href="../../locations/">Locations</a>&nbsp;
           <a class="nav-link" href="../../contact/">Contact</a>&nbsp;-->
+          <button id="menu-button" hidden>☰</button>
       </div>
+    </div>
+    <div id="nav-menu" hidden>
+      <a class="nav-menu-link" href="../../about/">About</a><br>
+      <a class="nav-menu-link" href="../../menu/">Menu</a><br>
+      <a class="nav-menu-link" href="../../references/">References</a><br>
+      <!--<a class="nav-menu-link" href="../../locations/">Locations</a><br>
+      <a class="nav-menu-link" href="../../contact/">Contact</a><br>-->
     </div>
     <div id="left-item-div">
         <a href="../" id="back-to-menu">❮ &nbsp; Back to Menu</a>
@@ -57,5 +65,6 @@
     </div>
 <script type="module" src="../menu-items.js"></script>
 <script type="module" src="script.js"></script>
+<script src="../../universal.js"></script>
   </body>
 </html>
