Actually made order button work, updated menu items

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <br>
             <!--<img id="order-button" src="assets/images/order-button.png">-->
             <!--<button id="order-button"><span id="order-button-text">ORDER NOW</span></button>-->
-            <img id="order-button-img" src="assets/images/order-button.png"><br>
+            <a href="./menu/"><img id="order-button-img" src="assets/images/order-button.png"></a><br>
             <br>
         </div>
     </div>
