--- a/about/index.html
+++ b/about/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <div id="nav-bar">
+      <a id="logo" href="../../"><img id="logo-img" src="../../assets/images/logo.png"></a>
       <div id="nav-link-container">
-          <a class="nav-link" href="/about/">About Us</a>&nbsp;
-          <a class="nav-link" href="/menu/">Menu</a>&nbsp;
-          <a class="nav-link" href="/locations/">Locations</a>&nbsp;
-          <a class="nav-link" href="/contact/">Contact</a>&nbsp;
+          <a class="nav-link" href="../../about/">About</a>&nbsp;
+          <a class="nav-link" href="../../menu/">Menu</a>&nbsp;
+          <a class="nav-link" href="../../references/">References</a>&nbsp;
+          <!--<a class="nav-link" href="../../locations/">Locations</a>&nbsp;
+          <a class="nav-link" href="../../contact/">Contact</a>&nbsp;-->
       </div>
-  </div>
+    </div>
   </body>
 </html>
