--- a/about/index.html
+++ b/about/index.html
@@ -11,11 +11,11 @@
   <body>
     <div id="nav-bar">
       <div id="nav-bar">
-        <a id="logo" href="../../"><img id="logo-img" src="../../assets/images/logo.png"></a>
+        <a id="logo" href="../"><img id="logo-img" src="../assets/images/logo.png"></a>
         <div id="nav-link-container">
-            <a class="nav-link" href="../../about/">About</a>&nbsp;
-            <a class="nav-link" href="../../menu/">Menu</a>&nbsp;
-            <a class="nav-link" href="../../references/">References</a>&nbsp;
+            <a class="nav-link" href="../about/">About</a>&nbsp;
+            <a class="nav-link" href="../menu/">Menu</a>&nbsp;
+            <a class="nav-link" href="../references/">References</a>&nbsp;
             <!--<a class="nav-link" href="../../locations/">Locations</a>&nbsp;
             <a class="nav-link" href="../../contact/">Contact</a>&nbsp;-->
             <button id="menu-button" hidden>☰</button>
