--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
       </div>
   </div>
 
-  <h1 id="about-title">About Us</h1>
+  <h1 id="about-title">ABOUT US</h1>
   <hr style="width: 40%;">
   <div class="main-container">
         <img id="earth-image" class="side-image circle" src="../assets/images/earth.gif">
