Added team id on about us

--- a/about/index.html
+++ b/about/index.html
@@ -23,8 +23,9 @@
       </div>
   </div>
 
-  <h1 id="about-title">ABOUT US</h1>
-  <hr style="width: 40%;">
+  <h1 id="about-title">THE GREENER PLATE</h1>
+  <hr style="width: 20%;">
+  <h2 id= "about-id">TeamID#: 2009-2</h2>
   <div class="main-container">
         <img id="earth-image" class="side-image circle" src="../assets/images/earth.gif">
         <div id="main-text-div">
