--- a/references/index.html
+++ b/references/index.html
@@ -23,14 +23,9 @@
       </div>
   </div>
 
-  <div id="scroll-overlay"></div>
-
-  <div id="overview-section" class="section">
-    <div class="image-container left-container overview-subsection subsection"><img class="img-half-center" src="../assets/images/title.png"></div>
-    <div class="text-container overview-subsection subsection"><p class="about-text">Here at the Greener Plate, we have a specific goal in mind: sustainable cooking for all peoples and cultures. Our menu specializes in different vegan and vegetarian cuisines and dishes from all around the world, ranging from the Americas, Europe, Asia, Africa, and the Middle East. Overall, our combination of fresh vegetables, herbs, and imported spices provide unique flavors as well as dishes for everyone to enjoy, no matter where you are from. </p></div>
-  </div>
-
-<script src="script.js"></script>
-  <script src="../universal.js"></script>
-  </body>
-</html>
+  <h1 id="about-title">REFRENCES</h1>
+  <hr style="width: 40%;">
+  <div class="main-container">
+    <div id="main-text-div">
+      <br><br><br>
+  <p> Below are our Works Cited for the information and images used in this website. Along with our external links to our Work Log and Copywright Checklist. </p>
