Added menu favorites and about us link to home page

--- a/index.html
+++ b/index.html
@@ -58,14 +58,25 @@
             <br>
         </div>
     </div>
-    <br><br><br><br><br><br>
-    <h3 id="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor sem nibh, a suscipit est laoreet congue. Maecenas in pretium risus. Mauris dignissim mollis urna. In hac habitasse platea dictumst. Vivamus lacinia eu tortor ut blandit. Nulla nec libero ut tortor pharetra mollis quis at nibh.</h3>
-    <p style="text-align: center;">Test</p>
-    <div id="menu">
-
+    <div id="menu-favorites">
+        <h2 id="menu-favorites-title">Try Our<br><span id="menu-favorites-em">Favorites</span></h2>
+        <div class="menu-item" style="width: 300px; height: 350px;"><img src="assets/images/menu-items/house-salad.png" class="menu-item-img" onerror="this.src='../assets/images/item-not-found.png'"><h3 class="menu-item-title" style="font-size: 1.5em; padding: 20px 20px 0px;">House Salad</h3><p class="menu-item-desc" style="font-size: 1em;">$7.99</p><button class="menu-item-add" onclick="window.location.href = './menu/item/?item=hous-ld'" style="right: 15px; bottom: 15px; height: 50px; width: 70px; font-size: 0.9em;">ADD</button></div>
+        <div class="menu-item" style="width: 300px; height: 350px;"><img src="assets/images/menu-items/tamale-bowls.png" class="menu-item-img" onerror="this.src='../assets/images/item-not-found.png'"><h3 class="menu-item-title" style="font-size: 1.5em; padding: 20px 20px 0px;">Tamale Bowls</h3><p class="menu-item-desc" style="font-size: 1em;">$12.99</p><button class="menu-item-add" onclick="window.location.href = './menu/item/?item=tama-ws'" style="right: 15px; bottom: 15px; height: 50px; width: 70px; font-size: 0.9em;">ADD</button></div>
+        <div class="menu-item" style="width: 300px; height: 350px;"><img src="assets/images/menu-items/ratatouille.png" class="menu-item-img" onerror="this.src='../assets/images/item-not-found.png'"><h3 class="menu-item-title" style="font-size: 1.5em; padding: 20px 20px 0px;">Ratatouille</h3><p class="menu-item-desc" style="font-size: 1em;">$11.99</p><button class="menu-item-add" onclick="window.location.href = './menu/item/?item=rataole'" style="right: 15px; bottom: 15px; height: 50px; width: 70px; font-size: 0.9em;">ADD</button></div>
+        <div class="menu-item" style="width: 300px; height: 350px;"><img src="assets/images/menu-items/kimchi-jjigae.png" class="menu-item-img" onerror="this.src='../assets/images/item-not-found.png'"><h3 class="menu-item-title" style="font-size: 1.5em; padding: 20px 20px 0px;">Kimchi Jjigae</h3><p class="menu-item-desc" style="font-size: 1em;">$11.99</p><button class="menu-item-add" onclick="window.location.href = './menu/item/?item=kimc-ie'" style="right: 15px; bottom: 15px; height: 50px; width: 70px; font-size: 0.9em;">ADD</button></div>
     </div>
-    <div id="googleMap" style="width:100%;height:400px;"></div>
-    <br><br><br><br><br><br><br><br>
+    <div id="about">
+        <h1 id="about-title">About Us</h1>
+        <h3>"A Greener Plate makes the world a greener place."</h3>
+        <h3 style="padding: 0 15%;">Here at the Greener Place, we hold oursevles to the highest standards of sustainability, bringing food from local farms straight to your plate.</h3>
+        <button id="learn-more-button" onclick="window.location.href='about'">Learn More</button>
+    </div>
+    <br><br><br><br><br><br>
+    <!-- <h3 id="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor sem nibh, a suscipit est laoreet congue. Maecenas in pretium risus. Mauris dignissim mollis urna. In hac habitasse platea dictumst. Vivamus lacinia eu tortor ut blandit. Nulla nec libero ut tortor pharetra mollis quis at nibh.</h3>
+    <p style="text-align: center;">Test</p>
+    -->
+    <!-- <div id="googleMap" style="width:100%;height:400px;"></div>
+    <br><br><br><br><br><br><br><br> -->
     <script src="script.js"></script>
     <script src="universal.js"></script>
     <!-- <script>
