slightly worked on references

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Greneer Plate | About</title>
+    <title>The Greneer Plate | About Us</title>
     <link href="../style.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href='https://fonts.googleapis.com/css?family=EB Garamond' rel='stylesheet'>
@@ -13,7 +13,7 @@
       <div id="nav-bar">
         <a id="logo" href="../"><img id="logo-img" src="../assets/images/logo.png"></a>
         <div id="nav-link-container">
-            <a class="nav-link" href="../about/">About</a>&nbsp;
+            <a class="nav-link" href="../about/">About Us</a>&nbsp;
             <a class="nav-link" href="../menu/">Menu</a>&nbsp;
             <a class="nav-link" href="../references/">References</a>&nbsp;
             <!--<a class="nav-link" href="../../locations/">Locations</a>&nbsp;
