--- a/references/index.html
+++ b/references/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Greneer Plate | About</title>
+    <title>The Greneer Plate | About Us</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="../style.css" rel="stylesheet" type="text/css" />
     <link href='https://fonts.googleapis.com/css?family=EB Garamond' rel='stylesheet'>
@@ -13,7 +13,7 @@
       <div id="nav-bar">
         <a id="logo" href="../"><img id="logo-img" src="../assets/images/logo.png"></a>
         <div id="nav-link-container">
-            <a class="nav-link" href="../about/">About</a>&nbsp;
+            <a class="nav-link" href="../about/">About Us</a>&nbsp;
             <a class="nav-link" href="../menu/">Menu</a>&nbsp;
             <a class="nav-link" href="../references/">References</a>&nbsp;
             <!--<a class="nav-link" href="../../locations/">Locations</a>&nbsp;
@@ -23,9 +23,9 @@
       </div>
   </div>
 
-  <h1 id="about-title">REFRENCES</h1>
+  <h1 id="about-title">REFERENCES</h1>
   <hr style="width: 40%;">
   <div class="main-container">
     <div id="main-text-div">
       <br><br><br>
-  <p> Below are our Works Cited for the information and images used in this website. Along with our external links to our Work Log and Copywright Checklist. </p>
+  <h1>Works</h1>
